[package]
name = "osm_house_to_street"
version = "0.1.0"
edition = "2024"

[dependencies]
geo = { version = "0.32.0", features= ["proj"] }
geojson = "1.0.0"
lazy_static = "1.5.0"
osmpbf = "0.3.8"
proj = { version = "*", features=["bundled_proj"] }
rstar = "0.12.2"
serde = "1.0"
serde_json = "1.0.149"
